tests/integration/fixtures/laugh/error/같은_스코프_중복_선언.laugh
{
  변수 a = "hi";
  변수 a = 3;
}
